[package]
name = "sundials-sys"
version = "0.2.1"
authors = ["Jason Dark <email@jkdark.com>", "Arthur Carcano <arthur.carcano@inria.fr>"]
edition = "2018"
links = "sundials"

description = "A -sys crate for the SUNDIALS suite of ODE solvers"
categories = ["external-ffi-bindings", "science"]
repository = "https://github.com/krtab/sundials-sys"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["ode", "solver", "sundials", "differential"]
exclude = ["**/*.pdf","vendor/examples"]

[build-dependencies]
bindgen = "0.58"
cmake = "0.1.35"

[features]
default = ["arkode", "cvode", "ida", "kinsol"]
static_libraries = []
build_libraries = []
arkode = []
cvode = []
cvodes = []
ida = []
idas = []
kinsol = []
nvecopenmp = []
nvecpthreads = []

[dependencies]

