[package]
name = "sundials-sys"
version = "0.2.4"
authors = ["Jason Dark <email@jkdark.com>", "Arthur Carcano <arthur.carcano@gmail.fr>", "Christophe Troestler <christophe.troestler@umons.ac.be>" ]
edition = "2018"
links = "sundials"

description = "A -sys crate for the SUNDIALS suite of ODE solvers"
categories = ["external-ffi-bindings", "science"]
repository = "https://github.com/Chris00/sundials-sys"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["ode", "solver", "sundials", "differential"]
exclude = ["**/*.pdf","vendor/examples"]

[build-dependencies]
bindgen = "0.58"
cmake = "0.1.35"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.15"

[features]
default = ["arkode", "cvode", "ida", "kinsol"]
static_libraries = []
build_libraries = []
arkode = []
cvode = []
cvodes = []
ida = []
idas = []
kinsol = []
nvecopenmp = []
nvecpthreads = []

[dependencies]

[package.metadata.docs.rs]

features = ["build_libraries", "arkode", "cvode", "cvodes", "ida", "idas", "kinsol", "nvecopenmp", "nvecpthreads"]